tests/ui/invalid_type_wch_c.stderr
error: unexpected wchar type `f32`, expected one of: u16, u32, i16, i32
 --> $DIR/invalid_type_wch_c.rs:3:32
  |
3 | const INVALID: &[f32] = wch_c!(f32, "oops");
  |                                ^^^
