tests/ui/invalid_type_wch_c.rs
use wchar::wch_c;

const INVALID: &[f32] = wch_c!(f32, "oops");

fn main() {}
